--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             Duis aute irure dolor in reprehenderit in <em>voluptate velit</em> esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <!--This is a nice comment. Thanks for checking my blog post-->
         <p>
             Phasellus egestas tellus rutrum tellus pellentesque eu.
             Cursus vitae congue mauris rhoncus aenean vel elit.
